test/fails/bad_functions/return_type5.lgl
int f() {
    return 5;
}

int g(bool x) {
    return x > 0;
}

void main() {
    print g(f());
    return;
}